force-app/main/default/objects/Experience_Request__c/Experience_Request__c.object-meta.xml
<CustomObject>
    <label>Experience Request</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Experience Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>