force-app/main/default/objects/Experience_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Experience Requests</relationshipLabel>
    <relationshipName>Experience_Requests2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>