force-app/main/default/objects/Experience_Request__c/fields/Experience_Name__c.field-meta.xml
<CustomField>
    <fullName>Experience_Name__c</fullName>
    <label>Experience Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>